--- a/bitbucket-runner/docker-compose.yaml
+++ b/bitbucket-runner/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       - OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID}
       - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
       - WORKING_DIRECTORY=${WORKING_DIRECTORY}
+    env_file: .env_file
     volumes:
       - /tmp:/tmp
       - /var/run/docker.sock:/var/run/docker.sock
